--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 KINESIS_STREAM='test'
 START_TIME='datetime(2025, 9, 10, 13, 30, 0)'
-SCYLLA_URL='http://node-0.aws-us-east-1.xxxxxxxxx.clusters.scylla.cloud:8000'
+SCYLLA_URL='http://scylla-url:8000'
 DST_TABLE='destination_table_name'
+
 REGION='us-east-1'
