--- a/.env
+++ b/.env
@@ -1,17 +1,16 @@
 KINESIS_STREAM_NAME='test'
-START_TIME='2025,09,10,13,30,00'
 KINESIS_REGION='us-east-1'
+KINESIS_START_TIME='2025,09,10,13,30,00'
+KINESIS_FETCH_BATCH_SIZE=1000
+
 S3_EXPORT_ARN='arn:aws:dynamodb:us-east-1:633453453456:table/table_name/export/017346346456456526-aeeb220'
 S3_BUCKET=some-s3-bucket-name
 S3_MANIFEST_KEY=ddb_export_1509_some_table/AWSDynamoDB/01723422872577364-cs84884f54/manifest-summary.json
 
 ALTERNATOR_IPS="10.1.0.1,10.1.0.2,10.1.0.3"
-ALTERNATOR_SSL=false
-#plain:8000 SSL:8043
-ALTERNATOR_PORT=8000
+ALTERNATOR_USE_SSL=false
 ALTERNATOR_REGION='us-east-1'
 ALTERNATOR_ACCESS_KEY=accesskey
 ALTERNATOR_SECRET_KEY=secretkey
-DST_TABLE_NAME='destination_table_name'
-FETCH_BATCH_SIZE=1000
-PUT_BATCH_SIZE=300
+ALTERNATOR_DST_TABLE='destination_table_name'
+ALTERNATOR_PUT_BATCH_SIZE=300
